--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -136,7 +136,8 @@
     "general": {
       "all": "All",
       "title": "Product Collections",
-      "no_matches": "No products found in this collection",
+      "no_matches_title": "You're here early.",
+      "no_matches_desc": "We’ll be adding more products soon. Keep your ears perked up!",
       "link_title": "Browse {{ title }}",
       "all_collection_title": "All {{ title }}",
       "quick_shop": "See more +",
